--- a/calendar/lang/french/desc.ini
+++ b/calendar/lang/french/desc.ini
@@ -1,3 +1,3 @@
 name=Calendrier
 desc="Ce module est un calendrier avec ajout d'évenements possible. Les utilisateurs peuvent ajouter des évenements (gestion du niveau d'accès)."
-admin_links="Catégories => (Gestion => index.php?url=/admin/categories/, Ajouter => index.php?url=/admin/categories/add/), Configuration => index.php?url=/admin/config/"
+admin_links="Gestion des événements => index.php?url=/admin/manage/, Catégories => (Gestion => index.php?url=/admin/categories/, Ajouter => index.php?url=/admin/categories/add/), Configuration => index.php?url=/admin/config/"
